--- a/index.html
+++ b/index.html
@@ -88,5 +88,6 @@ Se il sistema si blocca o si arresta in modo anomalo, vedere sopra.</li>
 <a href="jb.html">JB</a>
 <a href="mira.html">MIRA</a>
 <a href="netcat.html">NETCAT</a>
+<a href="disableupdates.html">Disable Updates</a>
 </body>
 </html>
