Added mira unoffical

--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@ function italian()
     document.getElementById('english').style.display = 'none';
     document.getElementById('italian').style.display = 'block';
 }
+window.applicationCache.ondownloading = function()
+{
+	document.getElementById("progress").innerHTML="<h3>Caching started !!</h3>";
+};
+
+window.applicationCache.onprogress = function(a)
+{
+	document.getElementById("progress").innerHTML="<h3>Caching Status: "+(Math.round(100*(a.loaded/a.total)))+"% Completed</h3>";
+};
+
+window.applicationCache.oncached=function()
+{
+	document.getElementById("progress").innerHTML="<h3>Caching completed !!</h3>";
+};
 </script>
 <p>
 <a href="#" onclick="english(); return false">English</a>
@@ -85,7 +99,11 @@ Se il sistema si blocca o si arresta in modo anomalo, vedere sopra.</li>
 <p><i>Questo exploit <b>va</b> in crash e blocco. A volte devi anche riprovare 10 volte per ottenere il jailbreak.</i></p>
 <p><i>Traduzione italiana da theheroGAC.</i></p>
 </div>
+<br>
+<div id="progress"></div>
+<br>
 <a href="jb.html">JB</a>
 <a href="mira.html">MIRA</a>
+<a href="mira_unofficial.html">MIRA-Unofficial</a>
 </body>
 </html>
